# 3ds-ui-test-rs

./: Cargo.toml
.cargo/: config.toml
assets/: vshader.pica
src/: main.rs
